featL add readmfile