@@ -1,12 +1,5 @@
-# Here Run JavaFx Application
-# Compile
-javac --module-path /home/abdellah/javafx-sdk-21.0.2/lib \
-      --add-modules javafx.controls,javafx.fxml \
-      -cp "chatAppJava/lib/*" \
-      chatAppJava/src/Main.java \
+# Compile & Execute
+javac chatAppJava/src/server/*.java chatAppJava/src/client/*.java chatAppJava/src/services/*.java
+java chatAppJava/src/server/ServerChat.java
 
-# Run
-java --module-path /home/abdellah/javafx-sdk-21.0.2/lib \
-     --add-modules javafx.controls,javafx.fxml \
-     -cp "chatAppJava/src:chatAppJava/lib/*" \
-    Main
+
